Fixed issue where the Object... signature was preventing Map<> and List<> signatures from being used and causing even empty maps to be encoded Added JaCoCo to help reduce the lack of testing